--- a/poke/templates/poke/allplayers.html
+++ b/poke/templates/poke/allplayers.html
@@ -13,4 +13,6 @@
         </tr>
         {% endfor %}
     </table>
+    <a href="{% url 'poke:choicepoke' %}"><button>Choose a pokemon</button></a>
+    <a href="{% url 'poke:restallplayers' %}"><button>restapi</button></a>
 {% endblock %}
